# bbg_mm

./: .gitignore  BUGS_FIXED.md  INTEGRATION_BUGS.md  INTEGRATION_TESTS_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  LIBRARY_INTEGRATION_SUMMARY.md  README.md  TEST_SUMMARY.md  config.example.json  flake.nix  main.py  pyproject.toml
.github/workflows/: tests.yml
bgg_mm/: bgg.py  cli.py  notify.py  shop.py  state.py
debug_html/: catalog-vantage-1761131513.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-5425016928882-1761059344.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-5425016929131-1761131513.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-850032180863-1761132422.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-8718026306731-1761059006.html  search-vantage-1761059043.html  search-vantage-1761059344.html  search-vantage-1761131513.html
debug_xml/: bgg-wishlist-mageleve-boardgame-1761056426.xml  bgg-wishlist-mageleve-boardgameexpansion-1761056244.xml  catalog_get.html  product_detail_example.html  www.moenen-en-mariken.nl_Archive [25-10-21 16-38-31].har  www.moenen-en-mariken.nl_producten_details.php_Archive [25-10-21 16-44-48].har  www.moenen-en-mariken.nl_producten_details.php_Archive [25-10-21 16-58-45].har  www.moenen-en-mariken.nl_producten_details.php_Archive [25-10-21 16-59-06].har
tests/: __init__.py  integration_config.py  integration_test.py  manual_test.py  test_bgg.py  test_cli.py  test_integration.py  test_live.py  test_notify.py  test_shop.py  test_state.py
tests/fixtures/: catalog-vantage-1761059004.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-850032180863-1761132422.html  detail-http-www-moenen-en-mariken-nl-producten-details-php-code-8718026306731-1761059006.html
