[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgg-mm"
version = "0.1.0"
description = "Check a BoardGameGeek wishlist against the Moenen en Mariken shop and notify via ntfy."
authors = [
  { name = "Luko", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "bgg-api>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.10.0",
  "pytest-timeout>=2.1.0",
  "pytest-rerunfailures>=12.0"
]

[project.scripts]
bgg-mm = "bgg_mm.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real API calls (deselect with '-m \"not integration\"')",
]
# By default, skip integration tests unless explicitly requested
addopts = "-m 'not integration'"
