[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgg-mm"
version = "0.1.0"
description = "Check a BoardGameGeek wishlist against the Moenen en Mariken shop and notify via ntfy."
authors = [
  { name = "Luko", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "bgg-api>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "pytest-cov>=6.0",
]

[project.scripts]
bgg-mm = "bgg_mm.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
  "live: marks tests as requiring live network access (deselect with '-m not live')",
]
addopts = "--cov=bgg_mm --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["bgg_mm"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
